Trying to add github actions v2.3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           curl -LO https://cli.doppler.com/install.sh
           chmod +x install.sh
-          ./install.sh
+          sudo ./install.sh
           sudo mv /usr/local/bin/doppler /usr/bin/
           doppler --version
 
