--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,7 @@ jobs:
         env:
           DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
         run: |
-          curl -LO https://cli.doppler.com/install.sh
-          chmod +x install.sh
-          sudo ./install.sh
-          sudo mv /usr/local/bin/doppler /usr/bin/
+          (curl -Ls --tlsv1.2 --proto "=https" --retry 3 https://cli.doppler.com/install.sh || wget -t 3 -qO- https://cli.doppler.com/install.sh) | sudo sh
           doppler --version
 
       - name: Retrieve secrets from Doppler
