--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: /backend
       dockerfile: Dockerfile
+    image: setlist-backend-image:latest
     ports:
       - "8888:8888"
     environment:
@@ -17,6 +18,7 @@ services:
     build:
       context: /frontend
       dockerfile: Dockerfile
+    image: setlist-frontend-image:latest
     ports:
       - "3000:3000"
     environment:
