--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,11 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
         run: |
-          ls -lha
           echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
           docker buildx create --use
-          docker buildx build --tag elicot/setlist-frontend-image:latest --push /frontend
-          docker buildx build --tag elicot/setlist-backend-image:latest --push /backend
+          ls -lha
+          docker buildx build --tag elicot/setlist-frontend-image:latest --push frontend
+          docker buildx build --tag elicot/setlist-backend-image:latest --push backend
 
       - name: SSH into remote server and update Docker Stack
         uses: appleboy/ssh-action@master
