--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,5 +6,6 @@ RUN npm i -g pnpm
 RUN pnpm install
 COPY . .
 EXPOSE 3000
+ENV REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
 CMD ["pnpm", "start"]
 LABEL authors="elicot"
