--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,10 +13,16 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 #
 COPY ./app /code/app
 
+RUN apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg && \
+    curl -sLf --retry 3 --tlsv1.2 --proto "=https" 'https://packages.doppler.com/public/cli/gpg.DE2A7741A397C129.key' | gpg --dearmor -o /usr/share/keyrings/doppler-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/doppler-archive-keyring.gpg] https://packages.doppler.com/public/cli/deb/debian any-version main" | tee /etc/apt/sources.list.d/doppler-cli.list && \
+    apt-get update && \
+    apt-get -y install doppler \
+
 ENV MONGO_URI=${MONGO_URI}
 
 ENV SECRET_KEY=${SECRET_KEY}
 
 #
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8888"]
+CMD ["doppler", "run", "--", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8888"]
 
