--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,11 @@ RUN npm i -g pnpm
 RUN pnpm install
 COPY . .
 EXPOSE 3000
+RUN apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg && \
+    curl -sLf --retry 3 --tlsv1.2 --proto "=https" 'https://packages.doppler.com/public/cli/gpg.DE2A7741A397C129.key' | gpg --dearmor -o /usr/share/keyrings/doppler-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/doppler-archive-keyring.gpg] https://packages.doppler.com/public/cli/deb/debian any-version main" | tee /etc/apt/sources.list.d/doppler-cli.list && \
+    apt-get update && \
+    apt-get -y install doppler
 ENV REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
-CMD ["pnpm", "start"]
+CMD ["doppler", "run", "--", "pnpm", "start"]
 LABEL authors="elicot"
