Trying to add github actions v3.3

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - MONGO_URI=${MONGO_URI}
       - SECRET_KEY=${SECRET_KEY}
+      - DOPPLER_TOKEN=${DOPPLER_TOKEN}
     deploy:
       replicas: 2
       restart_policy:
