--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,3 +55,4 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           MONGO_URI: ${{ secrets.MONGO_URI }}
           REACT_APP_BACKEND_URL: ${{ secrets.REACT_APP_BACKEND_URL }}
+          DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
