--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -23,6 +23,7 @@ services:
     ports:
       - "3000:3000"
     environment:
+      - DOPPLER_TOKEN=${DOPPLER_TOKEN}
       - REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
     deploy:
       replicas: 2
