--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,14 +28,18 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
+        with:
+          install: true
+      - name: Login to Container Registry
+        uses: docker/login-action@v1.14.1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push Docker images
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
         run: |
-          echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-          docker buildx create --use
           docker buildx build --tag elicot/setlist-frontend-image:latest --push frontend
           docker buildx build --tag elicot/setlist-backend-image:latest --push backend
 
@@ -50,9 +54,8 @@ jobs:
             cd /home/Github/setListGenerator
             git fetch
             git pull
-            docker stack deploy -c docker-stack.yml setlist-generator
+            DOPPLER_TOKEN=${{ secrets.DOPPLER_TOKEN }} docker stack deploy -c docker-stack.yml setlist-generator
         env:
           SECRET_KEY: $SECRET_KEY
           MONGO_URI: $MONGO_URI
           REACT_APP_BACKEND_URL: $REACT_APP_BACKEND_URL
-          DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
